bitfield/tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> $DIR/11-bits-attribute-wrong.rs:11:14
   |
11 |     #[bits = 9]
   |              ^ expected an array with a fixed size of 9 elements, found one with 1 element
